// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public package surface > _generated/component.js entry exports only its intended surface 1`] = `
[
  "ComponentApi",
]
`;

exports[`public package surface > browser entry exports only its intended surface 1`] = `
[
  "AuthTokenFetcher",
  "ConvexEmbeddedClient",
  "ConvexEmbeddedClientOptions",
  "ConvexEmbeddedMutationOptions",
  "ConvexEmbeddedSchema",
  "ConvexEmbeddedUploadFetch",
  "ConvexEmbeddedUploadFetchOptions",
  "EMBEDDED_UPLOAD_PATH",
  "EmbeddedConnectionState",
  "EmbeddedDataDelete",
  "EmbeddedDataEvent",
  "EmbeddedDataWrite",
  "EmbeddedEvent",
  "EmbeddedEventListener",
  "EmbeddedOperationEvent",
  "EmbeddedOperationKind",
  "EmbeddedOperationPhase",
  "EmbeddedRemoteEvent",
  "EmbeddedRemoteStatus",
  "EmbeddedRuntimeDegradation",
  "EmbeddedRuntimeEvent",
  "EmbeddedRuntimePhase",
  "EmbeddedSchedulerEvent",
  "EmbeddedSpanEvent",
  "EmbeddedSpanPhase",
  "EmbeddedStorageEvent",
  "Watch",
  "createConvexEmbeddedUploadFetch",
]
`;

exports[`public package surface > bundler entry exports only its intended surface 1`] = `
[
  "EMBEDDED_GENERATED_FORMAT_VERSION",
  "EmbeddedBundleInput",
  "EmbeddedBundleResult",
  "EmbeddedCompatibleRuntimeIdentity",
  "EmbeddedFunctionKind",
  "EmbeddedFunctionManifest",
  "EmbeddedFunctionManifestEntry",
  "EmbeddedFunctionVisibility",
  "EmbeddedGeneratedInput",
  "EmbeddedGeneratedSchema",
  "FunctionPlacement",
  "GenerateEmbeddedInput",
  "GenerateEmbeddedResult",
  "createEmbeddedBundle",
  "generateEmbedded",
  "renderEmbeddedGenerated",
  "toModuleId",
]
`;

exports[`public package surface > convex.config entry exports only its intended surface 1`] = `
[
  "default",
]
`;

exports[`public package surface > convex.config.js entry exports only its intended surface 1`] = `
[
  "default",
]
`;

exports[`public package surface > devtools entry exports only its intended surface 1`] = `
[
  "EmbeddedDevtoolsSource",
  "MountEmbeddedDevtoolsOptions",
  "MountedEmbeddedDevtools",
  "createEmbeddedDevtoolsSource",
  "mountEmbeddedDevtools",
]
`;

exports[`public package surface > devtools/vite entry exports only its intended surface 1`] = `
[
  "EmbeddedDevtoolsVitePlugin",
  "EmbeddedDevtoolsVitePlugins",
  "embeddedDevtools",
]
`;

exports[`public package surface > expo entry exports only its intended surface 1`] = `
[
  "AuthTokenFetcher",
  "ConvexEmbeddedClient",
  "ConvexEmbeddedClientOptions",
  "ConvexEmbeddedMutationOptions",
  "ConvexEmbeddedSchema",
  "EmbeddedConnectionState",
  "EmbeddedDataDelete",
  "EmbeddedDataEvent",
  "EmbeddedDataWrite",
  "EmbeddedEvent",
  "EmbeddedEventListener",
  "EmbeddedOperationEvent",
  "EmbeddedOperationKind",
  "EmbeddedOperationPhase",
  "EmbeddedRemoteEvent",
  "EmbeddedRemoteStatus",
  "EmbeddedSchedulerEvent",
  "EmbeddedSpanEvent",
  "EmbeddedSpanPhase",
  "EmbeddedStorageEvent",
  "Watch",
]
`;

exports[`public package surface > metro entry exports only its intended surface 1`] = `
[
  "ConvexEmbeddedMetroOptions",
  "withConvexEmbedded",
]
`;

exports[`public package surface > node entry exports only its intended surface 1`] = `
[
  "AuthTokenFetcher",
  "ConvexEmbeddedClient",
  "ConvexEmbeddedClientOptions",
  "ConvexEmbeddedMutationOptions",
  "ConvexEmbeddedSchema",
  "ConvexEmbeddedUploadFetch",
  "ConvexEmbeddedUploadFetchOptions",
  "ConvexModules",
  "EMBEDDED_UPLOAD_PATH",
  "EmbeddedConnectionState",
  "EmbeddedDataDelete",
  "EmbeddedDataEvent",
  "EmbeddedDataWrite",
  "EmbeddedEvent",
  "EmbeddedEventListener",
  "EmbeddedOperationEvent",
  "EmbeddedOperationKind",
  "EmbeddedOperationPhase",
  "EmbeddedRemoteEvent",
  "EmbeddedRemoteStatus",
  "EmbeddedSchedulerEvent",
  "EmbeddedSpanEvent",
  "EmbeddedSpanPhase",
  "EmbeddedStorageEvent",
  "Watch",
  "createConvexEmbeddedUploadFetch",
]
`;

exports[`public package surface > schema entry exports only its intended surface 1`] = `
[
  "DeviceDataModel",
  "DeviceModel",
  "EmbeddedSchemaDefinition",
  "EmbeddedTableDefinition",
  "EmbeddedTableValidator",
  "LocalTableDefinition",
  "ReplicatedDataModel",
  "ServerDataModel",
  "ServerModel",
  "WireModel",
  "defineEmbeddedSchema",
  "embeddedTable",
  "localTable",
]
`;

exports[`public package surface > server entry exports only its intended surface 1`] = `
[
  "DefineEmbeddedOptions",
  "DefinedEmbedded",
  "defineEmbedded",
]
`;

exports[`public package surface > unplugin entry exports only its intended surface 1`] = `
[
  "ConvexEmbeddedPluginOptions",
  "ConvexEmbeddedUnplugin",
  "convexEmbedded",
  "convexEmbeddedUnplugin",
  "default",
]
`;

exports[`public package surface > values entry exports only its intended surface 1`] = `
[
  "EmbeddedValue",
  "e",
]
`;

exports[`public package surface > vite entry exports only its intended surface 1`] = `
[
  "ConvexEmbeddedPluginOptions",
  "convexEmbedded",
  "default",
]
`;
